- Cambios en estilos - Cambios en el html de páginas varias

--- a/historia.html
+++ b/historia.html
@@ -10,12 +10,10 @@
     <link rel="stylesheet" href="recursos/font-awesome/css/all.min.css">
     <title>Document</title>
 </head>
-
-<body>
+<body class="historia">
     <header>
         <div class="menu-contenedor">
             <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for="menu-bar"></label>
             <span class="logo">
                 <img src="img/logos/logo-bahaus.png" alt="">
             </span>
@@ -23,27 +21,31 @@
             <nav class="menu nav-menu">
 
                 <ul class="top-menu">
-                    <li class="inicio"><a href="index.html">A CERCA DE</a></li>
-                    <li class="acerca-de"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
-                    <li class="sobre-mi"><a href="historia.html">HISTORIA</a></li>
-                    <li class="contacto"><a href="contactanos.html">CONTÁCTANOS</a></li>
+                    <li class="inicio"><a href="index.html">INICIO</a></li>
+                    <li class="acerca-de"><a href="acerca-de.html">ACERCA DE</a></li>
+                    <li class="lo-que-somos"><a href="lo-que-somos.html">LO QUE SOMOS</a></li>
+                    <li class="historia"><a href="historia.html">HISTORIA</a></li>
+                    <li class="contactanos"><a href="contactanos.html">CONTÁCTANOS</a></li>
                     <li class="oficinas"><a href="oficinas.html">OFICINAS</a></li>
                 </ul>
             </nav>
-
+            <label class="icon-menu" for="menu-bar"><i class="fas fa-bars"></i></label>
         </div>
+
     </header>
     <section class="hero">
-        <div class="row">
+        <div class="separador-superior"></div>
+        <div class="row historia row-full">
             <div class="column">
-                <h1>HISTORIA BAUHAUS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure distinctio numquam veniam sunt maiores
-                    molestias dolorum aliquam officiis, doloribus blanditiis autem atque, asperiores, a accusamus odio!
-                    Eligendi hic libero inventore!</p>
+                <h1 class="titulo">HISTORIA BAUHAUS</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure distinctio numquam veniam sunt maiores molestias dolorum aliquam officiis, doloribus blanditiis autem atque, asperiores, a accusamus odio! Eligendi hic libero inventore!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta itaque ad distinctio mollitia debitis laboriosam dicta esse fuga rerum expedita maiores est recusandae possimus, impedit temporibus quidem beatae fugit asperiores!
+                Nemo, ea ipsa sunt alias dignissimos non totam aspernatur ratione similique eligendi commodi cumque repellendus fugit nam beatae molestiae, architecto eveniet reprehenderit, id iusto quae? Natus commodi corporis non quas.
+                Quis vel nihil ad cum, animi veritatis aut saepe quo, expedita natus, suscipit ea beatae fuga non itaque esse adipisci harum voluptates deleniti sapiente et pariatur perferendis dignissimos. Asperiores, veritatis!</p>
             </div>
             <div class="column">
                 <div class="img-contenedor">
-                    <img src="img/bauhaus (1).jpg" alt="">
+                    <img src="img/bauhaus-2.jpg" alt="">
                 </div>
             </div>
         </div><!-- .row -->
@@ -51,17 +53,17 @@
             <div class="column">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, ea in consectetur molestias
                     possimus accusantium eveniet labore deleniti rem obcaecati recusandae veritatis repellat magni, ab
-                    nemo alias cum quia quod.</p>
+                    nemo alias cum quia quod. Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quaerat optio quasi. Neque consequatur dignissimos, id dicta veniam maiores quisquam?</p>
             </div>
             <div class="column">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, ea in consectetur molestias
                     possimus accusantium eveniet labore deleniti rem obcaecati recusandae veritatis repellat magni, ab
-                    nemo alias cum quia quod.</p>
+                    nemo alias cum quia quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis ea iste consequuntur ducimus sed. Suscipit id labore deleniti velit fuga.</p>
             </div>
             <div class="column">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, ea in consectetur molestias
                     possimus accusantium eveniet labore deleniti rem obcaecati recusandae veritatis repellat magni, ab
-                    nemo alias cum quia quod.</p>
+                    nemo alias cum quia quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quasi vel vero repudiandae ut velit dolor praesentium facilis sapiente voluptas.</p>
             </div>
         </div><!-- .row -->
     </section><!-- section.hero -->
@@ -75,26 +77,22 @@
                     debitis dolores libero autem dolor quasi rerum praesentium.</p>
             </div>
             <div class="column">
-                <div class="row">
+                <div class="row row-full">
                     <div class="img-contenedor">
                         <img src="img/walter-gropius-1.jpg" alt="">
                     </div>
-                    <div class="redes-sociales">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-youtube"></i>
-                        <i class="fab fa-twitter"></i>
-                    </div>
-                    <h1>EL CREADOR</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa soluta, nulla asperiores facere
-                        ea odit eveniet mollitia. Dolorum quaerat sapiente, adipisci praesentium quae, porro at, ea
-                        voluptatum quasi amet consequatur?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta labore dolore alias minima
-                        accusamus nulla deleniti, tempore sit praesentium omnis impedit? Nam minima facilis numquam
-                        atque. Eveniet architecto officia est.
+                    <h2 class="titulo">EL CREADOR</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa soluta, nulla asperiores facere ea odit eveniet mollitia. Dolorum quaerat sapiente, adipisci praesentium quae, porro at, ea voluptatum quasi amet consequatur? Lorem ipsum dolor sit amet consectetur dipisicing elit. Soluta labore dolore alias minima accusamus nulla deleniti, tempore sit praesentium omnis impedit? Nam minima facilis numquam atque. Eveniet architecto officia est.
                     </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod obcaecati nihil iste a, reprehenderit nulla exercitationem sit, similique iure quaerat eaque, perferendis id. Dolores ipsum quam ullam eum magni. Illum.</p>
+                    <div class="redes-sociales">
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+                        <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                    </div>
                 </div> <!-- row -->
-                <div class="row">
+                <div class="row row-full">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, illum aut! Asperiores eius
                         deserunt doloremque iste quod tempore at ratione ab odio sequi explicabo, delectus tenetur,
                         repellendus magnam, aut nihil.</p>
@@ -102,7 +100,7 @@
                         <img src="img/Bauhaus-Bosses.jpg" alt="">
                     </div>
                 </div> <!-- row -->
-                <div class="row">
+                <div class="row row-full">
                     <div class="img-contenedor">
                         <img src="img/Bauhaus-en-Diseño-Web.jpg" alt="">
                     </div>
@@ -110,18 +108,24 @@
             </div>
         </div><!-- .row -->
     </section><!-- section.creador -->
+
+    <section class="back-1"></section>
     <footer>
-        <div class="row">
+        <div class="row row-full">
             <div class="column">
-                <div class="img-content">
-                    <img src="img/logos/logo-bahaus.png" alt="">
+                <div class="img-contenedor">
+                    <img src="img/logos/LOGO BLANCO.png" alt="">
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
