--- a/lo-que-somos.html
+++ b/lo-que-somos.html
@@ -40,7 +40,7 @@
         <div class="row row-full nuestra-historia">
             <div class="column img-nuestra-historia"></div>
             <div class="column">
-                <h1>NUESTRA HISTORIA</h1>
+                <h1 class="titulo">NUESTRA HISTORIA</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis debitis eligendi ipsam ex, odit
                     quisquam sint sed eos non! Distinctio quas ea hic expedita tempore adipisci autem facilis quo
                     minima?</p>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="column texto">
-                <h2>LO QUE SOMOS</h2>
+                <h2 class="titulo">LO QUE SOMOS</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsum neque hic nostrum dolore, nemo
                     cumque rerum ratione, enim esse delectus consequuntur exercitationem unde voluptatibus dolores
                     repudiandae eum vitae architecto?</p>
@@ -69,6 +69,14 @@
     </section><!-- section.lo-que-somos -->
 
     <section class="noticias">
+        <div class="flecha flecha-izquierda"><i class="fas fa-chevron-left"></i></div>
+        <div class="flecha flecha-derecha"><i class="fas fa-chevron-right"></i></div>
+        
+        <div class="row titulo">
+            <div class="column">
+                <h2>NOTICIAS RECIENTES</h2>
+            </div>
+        </div>
         <div class="slider">
             <div class="row">
                 <div class="column">
@@ -76,10 +84,8 @@
                         <img src="img/Newsletter-Barcelona-Design-Week-sense-imatge-765x510.jpg" alt="">
                     </div>
                     <div class="noticia">
-                        <h2>FERIA DE EL ARTE</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ratione cum nam repudiandae,
-                            explicabo numquam eum culpa aspernatur quos quas odit maiores doloremque possimus! Consequatur
-                            dolores ut sunt veritatis voluptatum.</p>
+                        <h3 class="titulo">FERIA DE EL ARTE</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div><!-- .column -->
 
@@ -88,10 +94,8 @@
                         <img src="img/ap,550x550,12x16,1,transparent,t.u6.png" alt="">
                     </div>
                     <div class="noticia">
-                        <h2>SIGLO XXI</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci veniam cupiditate, blanditiis
-                            unde minus veritatis ratione, accusantium doloremque pariatur placeat provident, dolore repellat
-                            facilis officia sit ab. Excepturi, dignissimos tempora.</p>
+                        <h3 class="titulo">SIGLO XXI</h3>
+                        <p>facilis officia sit ab. Excepturi, dignissimos tempora.</p>
                     </div>
                 </div><!-- .column -->
                 <div class="column">
@@ -99,10 +103,36 @@
                         <img src="img/Bauatelier Gropius, Dessau, 1927-1928 -by Edmund Collein.jpg" alt="">
                     </div>
                     <div class="noticia">
-                            <h2>SIGLO XXI</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci veniam cupiditate, blanditiis
-                                unde minus veritatis ratione, accusantium doloremque pariatur placeat provident, dolore repellat
-                                facilis officia sit ab. Excepturi, dignissimos tempora.</p>
+                            <h3 class="titulo">SIGLO XXI</h3>
+                            <p>unde minus veritatis ratione, accusantium doloremque </p>
+                    </div>
+                </div><!-- .column -->
+                <div class="column">
+                    <div class="img-contenedor">
+                        <img src="img/Newsletter-Barcelona-Design-Week-sense-imatge-765x510.jpg" alt="">
+                    </div>
+                    <div class="noticia">
+                        <h3 class="titulo">FERIA DE EL ARTE</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                    </div>
+                </div><!-- .column -->
+
+                <div class="column">
+                    <div class="img-contenedor">
+                        <img src="img/ap,550x550,12x16,1,transparent,t.u6.png" alt="">
+                    </div>
+                    <div class="noticia">
+                        <h3 class="titulo">SIGLO XXI</h3>
+                        <p>facilis officia sit ab. Excepturi, dignissimos tempora.</p>
+                    </div>
+                </div><!-- .column -->
+                <div class="column">
+                    <div class="img-contenedor">
+                        <img src="img/Bauatelier Gropius, Dessau, 1927-1928 -by Edmund Collein.jpg" alt="">
+                    </div>
+                    <div class="noticia">
+                            <h3 class="titulo">SIGLO XXI</h3>
+                            <p>unde minus veritatis ratione, accusantium doloremque </p>
                     </div>
                 </div><!-- .column -->
             </div> <!-- .row -->
@@ -116,10 +146,14 @@
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
