--- a/oficinas.html
+++ b/oficinas.html
@@ -36,6 +36,7 @@
     </header>
 
     <section class="hero">
+        <div class="separador-superior"></div>
         <div class="row">
             <div class="column">
                 <!-- logo container -->
@@ -54,7 +55,7 @@
                 <p class="horario">9:00am a 12:00pm</p>
                 <p class="texto">Domingo</p>
                 <p class="horario">11:00am a 12:00pm</p>
-                <p class="texto">Suscribete para saber de las ultimas noticias y recetas en PAL DESEINGO</p>
+                <p class="texto-2">Suscribete para saber de las ultimas noticias y recetas en PAL DESEINGO</p>
                 <div class="btn btn-suscribete">
                     <a href="" class="btn">Suscribete</a>
                 </div>
@@ -77,10 +78,14 @@
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
