--- a/acerca-de.html
+++ b/acerca-de.html
@@ -188,10 +188,14 @@
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
