--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     <section class="hero">
         <div class="separador-superior"></div>
         <div class="separador-inferior"></div>
+        <div class="slider">
+            <div class="row row-full">
+                <div class="column"></div>
+                <div class="column"></div>
+                <div class="column"></div>
+                <div class="column"></div>
+                <div class="column"></div>
+                <div class="column"></div>
+            </div>
+            
+        </div>
     </section><!-- section.hero -->
 
     <footer>
@@ -48,10 +59,10 @@
                 </div>
                 <p>TODOS LOS DERECHOS RESERVADOS</p>
                 <div class="redes-sociales">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube"></i></a>
+                    <a href="https://twitter.com/?lang=es" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
         </div>
